[package]
name = "executor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel.workspace = true
num_cpus.workspace = true
rayon.workspace = true
thiserror.workspace = true
tracing.workspace = true
