[package]
edition = "2021"
license = "AGPL-3.0"
name = "file_store"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
bincode.workspace = true
memmap2.workspace = true
ownedbytes.workspace = true
