[package]
edition = "2021"
license = "AGPL-3.0"
name = "leechy"
version = "0.1.0+py"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
name = "leechy"

[dependencies]
leechy = {path = "../leechy"}
pyo3 = {version = "0.22.0", features = ["extension-module", "experimental-async"]}
tokio = {version = "1.23.1", features = ["full"]}

[workspace]
