[package]
edition = "2021"
license = "AGPL-3.0"
name = "leechy"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
kuchiki = {path = "../kuchiki"}
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
toml.workspace = true
