[package]
name = "stract-llm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode.workspace = true
byteorder.workspace = true
flate2.workspace = true
itertools.workspace = true
serde.workspace = true
stdx.workspace = true
tch.workspace = true
thiserror.workspace = true
tokenizers.workspace = true
tracing.workspace = true
