[package]
name = "naive_bayes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown.workspace = true
itertools.workspace = true
serde = { workspace = true, features = ["derive"] }
stdx.workspace = true
