[package]
name = "optics-lsp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.83"
lsp-types = "0.95.0"
js-sys = "0.3.60"
console_error_panic_hook = "0.1.7"
serde = { version = "1.0.137", features = ["rc", "derive"] }
serde-wasm-bindgen = "0.6.3"
thiserror = "1.0.31"

optics = { path = "../optics" }

[workspace]
