[package]
edition = "2021"
license = "MIT"
name = "optics"
version = "0.1.0"

[dependencies]
bincode = {workspace = true}
itertools = {workspace = true}
lalrpop-util = {workspace = true}
logos = {workspace = true}
serde = {workspace = true}
thiserror = {workspace = true}
utoipa = {workspace = true}

[build-dependencies]
lalrpop = {workspace = true}
