[package]
name = "stract-query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools.workspace = true
min-max-heap.workspace = true
optics.workspace = true
proptest.workspace = true
schema.workspace = true
serde.workspace = true
serde_json.workspace = true
stdx.workspace = true
tantivy.workspace = true
url.workspace = true
urlencoding.workspace = true
utoipa.workspace = true
