[package]
edition = "2021"
license = "AGPL-3.0"
name = "robotstxt"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
itertools.workspace = true
nom.workspace = true
percent-encoding.workspace = true
url.workspace = true

[dev-dependencies]
proptest.workspace = true
regex.workspace = true
