[package]
edition = "2021"
license = "AGPL-3.0"
name = "speedy_kv"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
bincode.workspace = true
bloom = {path = "../bloom"}
common.workspace = true
file_store = {path = "../file-store"}
fst.workspace = true
memmap2.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
