[package]
name = "spell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fst.workspace = true
itertools.workspace = true
schema.workspace = true
serde.workspace = true
stdx.workspace = true
stract-query.workspace = true
tantivy.workspace = true
thiserror.workspace = true
tracing.workspace = true
